// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pill renders 1`] = `
<ForwardRef
  clickable={false}
  data-advanced={false}
  text="This is my..."
/>
`;

exports[`Pill treats @ text differently 1`] = `
<ForwardRef
  clickable={false}
  data-advanced={false}
  text="@(exp)"
/>
`;
